@@ -7,5 +7,5 @@ This package will allow you to revert to SMF's normal URLs without breaking any 
 [hr]
 
 Version 0.9
-Copyright (c) 2006-2008, Dannii Willis
+Copyright (c) 2006-2010, Dannii Willis
 [url=http://code.google.com/p/prettyurls]Pretty URLs project home[/url]
